# fast-counter

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: count.rs  incrementer.rs  main.rs
src/: counter.rs  default.rs  lib.rs  nightly.rs  safe_getters.rs  utils.rs
