[package]
name = "fastcounter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rand = "0.8"
rayon = "1.3"
criterion = "0.3"
num_cpus = "1.12.0"
thread-id = "4.0.0"

[[bench]]
name = "incrementer" 
harness = false
