[package]
name = "fast-counter"
version = "0.0.2"
edition = "2021"
description = "A sharded concurrent counter"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JackThomson2/fast-counter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rayon = "1.3"
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "main" 
harness = false

[profile.release]
panic = "abort"
opt-level = 3
codegen-units = 1
lto = "fat"
